--- a/server/index.html
+++ b/server/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatX</title>
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <link rel="stylesheet" href="./index.css">
+    <!-- <script src="node_modules/jquery/dist/jquery.js"></script> -->
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script> 
+    <link rel="stylesheet" href="static/index.css">
 </head>
 
 <body>
@@ -20,9 +21,8 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="message-container">
         <div class="main">
-
             <div class="messages" id="messages">
                 <!-- 聊天消息将在这里动态显示 -->
                 <div class="bot-message">你好，我是聊天机器人！</div>
@@ -36,8 +36,7 @@
         <textarea id="chatInput" placeholder="Type your message..."></textarea>
         <button id="send-button" onclick="sendQuestion()">Send</button>
     </div>
-    
-    <script src="index.js"></script>
+    <script src="static/index.js"></script>
 </body>
 
 </html>
