--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatX</title>
-    <!-- <script src="node_modules/jquery/dist/jquery.js"></script> -->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script> 
-    <link rel="stylesheet" href="static/index.css">
+    <link rel="stylesheet" href="static/index.{hash}.css">
 </head>
 
 <body>
@@ -36,7 +35,7 @@
         <textarea id="chatInput" placeholder="Type your message..."></textarea>
         <button id="send-button" onclick="sendQuestion()">Send</button>
     </div>
-    <script src="static/index.js"></script>
+    <script src="static/index.{hash}.js"></script>
 </body>
 
 </html>
